2013-08-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58164
	* gimple.c (walk_stmt_load_store_addr_ops): For visit_addr
	walk gimple_goto_dest of GIMPLE_GOTO.

	PR tree-optimization/58165
	* tree-call-cdce.c (shrink_wrap_one_built_in_call): If
	bi_call must be the last stmt in a bb, don't split_block, instead
	use fallthru edge from it and give up if there is none.
	Release conds vector when returning early.

2013-08-14  Xinliang David Li  <davidxl@google.com>

	* config/i386/i386.c (ix86_option_override_internal):
	Remove unused variable and field.

2013-08-14  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/57949
	* doc/invoke.texi: Add documentation of mcompat-align-parm
	option.
	* config/rs6000/rs6000.opt: Add mcompat-align-parm option.
	* config/rs6000/rs6000.c (rs6000_function_arg_boundary): For AIX
	and Linux, correct BLKmode alignment when 128-bit alignment is
	required and compatibility flag is not set.
	(rs6000_gimplify_va_arg): For AIX and Linux, honor specified
	alignment for zero-size arguments when compatibility flag is not
	set.

2013-08-14  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58145
	* tree-sra.c (build_ref_for_offset): If prev_base has
	TREE_THIS_VOLATILE or TREE_SIDE_EFFECTS, propagate it to MEM_REF.

2013-08-14  Xinliang David Li  <davidxl@google.com>

	* config/i386/i386.c (ix86_option_override_internal):
	Fix uninitialized variable error.

2013-08-14  Xinliang David Li  <davidxl@google.com>

	* config/i386/i386.opt: Define two new options.
	* config/i386/x86-tune.def: Add arch selector field in macros.
	* config/i386/i386.h: Adjust macro definition.
	* config/i386/i386.c (ix86_option_override_internal):
	Refactor the code.
	(parse_mtune_ctrl_str): New function.
	(set_ix86_tune_features): New function.
	(ix86_function_specific_restore): Call the new helper function.

2013-08-14  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/57662